--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "outDir": "dist",
         "strict": true,
         "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "strictPropertyInitialization": false
     },
     "include": [
         "src"
